# friday-ai-

./: agent_friday.py  pyproject.toml  server.py
data/: friday_memory.db
friday/tools/: __init__.py  diagnostics.py  files.py  info.py  memory.py
