[project]
name = "friday-tony-stark-demo"
version = "0.1.0"
description = "Friday — A Tony Stark-inspired MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
    "livekit-agents[deepgram,groq,openai,sarvam,silero]>=1.5.1",
    "livekit-plugins-google>=1.5.1",
    "python-dotenv",
    # FRIDAY 17 Tools dependencies
    "psutil>=6.0.0",                    # System diagnostics & process control
    "screen-brightness-control>=0.24.0", # Display brightness control
    "pyautogui>=0.9.54",                # Screenshots & UI automation
    "pyperclip>=1.9.0",                 # Clipboard access
    "wikipedia>=1.4.0",                 # Wikipedia API
]

[project.scripts]
friday = "server:main"
friday_voice = "agent_friday:dev" # Points to the wrapper

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
